# sorukayisi-backend

./: Cargo.toml  README.md  databasemig.sh  databaseupg.sh  permfix.sh
.sqlx/: query-1742aea307ce6442afa9a2571cb34e1ea316485301479ac7999df140fd32bfd8.json  query-471122310ea0f5a49ad1c7550b5539e3ce35af99bb2a6b488d79ec059eaff490.json  query-57fca4eb6b3543e259317ec56bddcd2b8c8eb10054cec1204b3e6d226fd450f0.json
src/: config.rs  errors.rs  main.rs
src/db/: mod.rs  models.rs  pool.rs  schema.rs
src/handlers/: admin.rs  auth.rs  game.rs  mod.rs  player.rs  question.rs  websocket.rs
src/middleware/: auth.rs  mod.rs  recaptcha.rs
src/services/: email.rs  mod.rs
src/utils/: mod.rs  security.rs  validation.rs
