[package]
name = "sorukayisi-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
actix-ws = "0.2.5"
actix-cors = "0.6.4"
tokio = { version = "1.33.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "migrate"] }
env_logger = "0.10.0"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
uuid = { version = "1.4", features = ["v4"] }
dotenv = "0.15.0"