[package]
name = "sorukayisi-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
actix-web = "4.4.0"
actix-ws = "0.2.5"
actix-cors = "0.6.4"
actix-rt = "2.9.0"
actix-service = "2.0.2"

# Asenkron ve eşzamanlılık
tokio = { version = "1.33.0", features = ["full"] }
futures-util = "0.3"

# Veritabanı
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "migrate", "macros", "uuid", "json", "bigdecimal"] }

# Serileştirme/Deserileştirme
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Loglama
env_logger = "0.10.0"
log = "0.4"

# Zaman işleme
chrono = { version = "0.4", features = ["serde"] }

# Kimlik doğrulama ve güvenlik
argon2 = { version = "0.5.2", features = ["std", "password-hash"] }
jsonwebtoken = "9.1.0"
rand = "0.8.5"
rand_core = "0.6.4"

# HTTP İstemcisi ve email gönderimi
reqwest = { version = "0.11", features = ["json"] }
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1", "tokio1-rustls-tls", "builder"] }

# Diğer yardımcılar
uuid = { version = "1.4", features = ["v4", "serde"] }
dotenv = "0.15.0"
validator = { version = "0.16", features = ["derive"] }
lazy_static = "1.4.0"
anyhow = "1.0.75"
thiserror = "1.0.49"
derive_more = "0.99.17"
url = "2.4.1"
base64 = "0.21.4"
regex = "1.10.2"